--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
     "homepage": "http://framework.zend.com/",
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zendframework": "2.3.3"
+        "zendframework/zendframework": "2.3.3",
+        "zf-commons/zfc-twig": "~1.2",
+        "doctrine/doctrine-orm-module": "0.9.*"
+    },
+    "require-dev": {
+        "zendframework/zend-developer-tools": "0.0.2.*"
     }
 }
