--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,9 @@
     ],
     "homepage": "http://framework.zend.com/",
     "require": {
-        "php": ">=5.3.3",
-        "zendframework/zendframework": "2.3.3",
         "zf-commons/zfc-twig": "~1.2",
-        "doctrine/doctrine-orm-module": "0.9.*"
+        "doctrine/doctrine-orm-module": "0.9.*",
+        "zendframework/zendframework": "~2.5"
     },
     "require-dev": {
         "zendframework/zend-developer-tools": "0.0.2.*"
